--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -64,13 +64,6 @@ jobs:
 
     runs-on: windows-latest  # For a list of available runner types, refer to
                              # https://help.github.com/en/actions/reference/workflow-syntax-for-github-actions#jobsjob_idruns-on
-
-    env:
-      Solution_Name: your-solution-name                         # Replace with your solution name, i.e. MyWpfApp.sln.
-      Test_Project_Path: your-test-project-path                 # Replace with the path to your test project, i.e. MyWpfApp.Tests\MyWpfApp.Tests.csproj.
-      Wap_Project_Directory: your-wap-project-directory-name    # Replace with the Wap project directory relative to the solution, i.e. MyWpfApp.Package.
-      Wap_Project_Path: your-wap-project-path                   # Replace with the path to your Wap project, i.e. MyWpf.App.Package\MyWpfApp.Package.wapproj.
-
     steps:
     - uses: actions/checkout@v4
     - name: Setup dotnet
@@ -88,4 +81,4 @@ jobs:
       run: 
         dotnet restore .\doot-gen\doot-gen.csproj
     - name: Build
-      run: dotnet build .\doot-gen\doot-gen.csproj
+      run: dotnet build .\doot-gen\doot-gen.csproj -o .\$${{matrix.configuration}} -c $${{matrix.configuration}}
