--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -85,6 +85,7 @@ jobs:
 
     - name: Upload
       uses: actions/upload-artifact@v3
+      if: matrix.configuration == 'Release'
       with:
-        name: mh-doot-gen-$${{matrix.configuration}}
+        name: mh-doot-gen
         path: .\${{matrix.configuration}}
