--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -74,7 +74,7 @@ jobs:
       run: 
         dotnet restore .\doot-gen\doot-gen.csproj
     - name: Build
-      run: dotnet build .\doot-gen\doot-gen.csproj -o .\${{matrix.configuration}} -c ${{matrix.configuration}}
+      run: dotnet build .\doot-gen\doot-gen.csproj -o .\${{matrix.configuration}} -c ${{matrix.configuration}} --property WarningLevel=0
 
     # Upload release artifacts
     - name: Copy extract-rise-pak.bat to output folder
