--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -83,6 +83,7 @@ jobs:
       run: |
         cp .\extract-rise-pak.bat .\Release\extract-rise-pak.bat 
         cp .\LICENSE .\Release\LICENSE.txt 
+        cp .\doot-gen\mhdootgen.png .\Release\mhdootgen.png 
     - name: Upload
       uses: actions/upload-artifact@v3
       if: matrix.configuration == 'Release'
